adding matiral UI-2.2

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Waqar Ahmad" />
+    <meta name="keywords" content="Waqar Ahmad,react Dashboard,react" />
     <meta
       name="description"
-      content="Dashboard Template developed using Material UI and REACT JS"
+      content="Dashboard Template developed by Waqar Ahmad using Material UI and REACT JS"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
